syntax = "proto3";
package transfers;
import "base.proto";
import "company.proto";
import "profile.proto";

service TransferService {
  rpc getById(Id) returns (GetOneResponse) {}
  rpc getList(QueryTransfer) returns (GetListResponse) {}
  rpc create(Transfer) returns (GetOneResponse) {}
  rpc update(Transfer) returns (GetOneResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}
message Transfer {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional string transferDate = 7;
  optional double amount = 8;
  optional double totalValue = 9;
  optional int32 transfereeId = 10;
  optional int32 profileId = 11;
  optional Company transferee = 12;
  optional Profile profile = 13;

}
message QueryTransfer {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 page = 7;
  optional int32 limit = 8;
  optional string sortBy = 9;
  optional string sortOrder = 10;
  optional string transferDate = 11;
  optional double amount = 12;
  optional double totalValue = 13;
  optional int32 transfereeId = 14;
  optional int32 profileId = 15;
}

message GetListResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  repeated Transfer data = 6;
}

message GetOneResponse {
  string message = 1;
  optional Transfer data = 2;
}